syntax = "proto3";
package v1;

message CustomerDetails{
	string api = 1;
	string id = 2;
	string name = 3;
	string email = 4;
	string address = 5;
	string phone = 6;
}

message Acknowledgement{
	string api = 1;
	string id = 2;
}

// Service to manage Customer tasks
service NotifyService {
	rpc CreateNotification(CustomerDetails) returns (Acknowledgement){}
}
